NetBSD Problem Report #49665

From www@NetBSD.org  Sat Feb 14 12:27:00 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B4C83A57FE
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 14 Feb 2015 12:27:00 +0000 (UTC)
Message-Id: <20150214122659.9177EA6562@mollari.NetBSD.org>
Date: Sat, 14 Feb 2015 12:26:59 +0000 (UTC)
From: jmcneill@invisible.ca
Reply-To: jmcneill@invisible.ca
To: gnats-bugs@NetBSD.org
Subject: 7.0 install not bootable if installing over GPT disk
X-Send-Pr-Version: www-1.0

>Number:         49665
>Category:       port-i386
>Synopsis:       7.0 install not bootable if installing over GPT disk
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Feb 14 12:30:00 +0000 2015
>Closed-Date:    Thu May 14 08:33:47 +0000 2015
>Last-Modified:  Thu May 14 08:33:47 +0000 2015
>Originator:     Jared McNeill
>Release:        7.0_BETA
>Organization:
>Environment:
>Description:
If you install 7.0_BETA or -current i386/amd64 (selecting "use entire disk" in the installer) on a disk that already had a GPT, the resulting system is left unbootable.
>How-To-Repeat:
Install FreeBSD 10.1-RELEASE, then try to install NetBSD 7.0_BETA or -current over top of it.
>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-i386-maintainer->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Wed, 06 May 2015 09:29:08 +0000
Responsible-Changed-Why:
take


State-Changed-From-To: open->pending-pullups
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 09 May 2015 12:10:31 +0000
State-Changed-Why:
Waiting on #744


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49665 CVS commit: src/usr.sbin/sysinst
Date: Sat, 9 May 2015 12:06:31 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat May  9 12:06:31 UTC 2015

 Modified Files:
 	src/usr.sbin/sysinst: defs.h disks.c partman.c

 Log Message:
 Add a new utility function "update_wedges()", which triggers a scan
 for wedges on the given disk. Call this after writing a disklabel.
 This makes all auto-discovered wedges go away after we changed the
 partitioning (and are not using GPT) and fixes PR 49665.


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/usr.sbin/sysinst/defs.h
 cvs rdiff -u -r1.7 -r1.8 src/usr.sbin/sysinst/disks.c
 cvs rdiff -u -r1.8 -r1.9 src/usr.sbin/sysinst/partman.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49665 CVS commit: [netbsd-7] src/usr.sbin/sysinst
Date: Sat, 9 May 2015 13:50:15 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Sat May  9 13:50:15 UTC 2015

 Modified Files:
 	src/usr.sbin/sysinst [netbsd-7]: defs.h disks.c partman.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #744):
 	usr.sbin/sysinst/defs.h: revision 1.7
 	usr.sbin/sysinst/disks.c: revision 1.8
 	usr.sbin/sysinst/partman.c: revision 1.9
 Add a new utility function "update_wedges()", which triggers a scan
 for wedges on the given disk. Call this after writing a disklabel.
 This makes all auto-discovered wedges go away after we changed the
 partitioning (and are not using GPT) and fixes PR 49665.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3.4.2 -r1.3.4.3 src/usr.sbin/sysinst/defs.h
 cvs rdiff -u -r1.4.4.3 -r1.4.4.4 src/usr.sbin/sysinst/disks.c
 cvs rdiff -u -r1.4.4.2 -r1.4.4.3 src/usr.sbin/sysinst/partman.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Thu, 14 May 2015 08:33:47 +0000
State-Changed-Why:
Fixed by Martin in:
http://mail-index.netbsd.org/source-changes/2015/05/09/msg065726.html
Pulled up to netbsd-7 in ticket 744.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.40 2014/08/02 14:16:04 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.