Add a new utility function "update_wedges()", which triggers a scan for wedges on the given disk. Call this after writing a disklabel. This makes all auto-discovered wedges go away after we changed the partitioning (and are not using GPT) and fixes PR 49665.